deploy/platform/killbill/killbill/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: killbill
  namespace: saasodoo
  labels:
    app.kubernetes.io/name: killbill
    app.kubernetes.io/component: billing-engine
    app.kubernetes.io/part-of: killbill
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9404
      targetPort: 9404
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: killbill
